# plutus

./: .env.example  .gitignore  .prettierignore  AGENTS.md  DESIGN.md  README.ko.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs  remote_transport.rs  secure_store.rs
apps/tauri/src-tauri/src/audit/: mod.rs
apps/tauri/src-tauri/src/commands/: app_memory_remote.rs  app_state.rs  artifacts.rs  deterministic_completion.rs  final_output.rs  inputs.rs  memory.rs  mod.rs  portfolio.rs  portfolio_helpers.rs  post_run.rs  provider_holdings.rs  run_lifecycle.rs  runtime.rs  snapshot_memory_wiki.rs  snapshots.rs  tests.rs  trading.rs  trading_catalog.rs  trading_payload.rs  trading_provider_config.rs  trading_provider_sync.rs  trading_provider_sync_metadata.rs  trading_provider_sync_tests.rs  trading_types.rs  validation.rs  wiki.rs
apps/tauri/src-tauri/src/commands/runtime/: runtime_stream.rs
apps/tauri/src-tauri/src/commands/tests/: final_output.rs  final_output_artifacts.rs  lifecycle.rs  memory_snapshot.rs  runtime.rs  scope.rs  snapshot_redaction.rs
apps/tauri/src-tauri/src/remote_control/: authorization.rs  executor.rs  mod.rs  pairing.rs  security.rs  test_support.rs  types.rs
apps/tauri/src-tauri/src/security/: mod.rs
apps/tauri/src-tauri/src/storage/: database.rs  mod.rs  models.rs  paths.rs  portfolio.rs  runs.rs  tests.rs  util.rs
(+114 files in other folders)
