[package]
name = "plutus-tauri-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "plutus_tauri_runtime"
path = "src/lib.rs"

[[bin]]
name = "plutus-tauri"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
hex = "0.4"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tempfile = "3.10"
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
